# dotfiles

./: .Xresources  .bashrc  .gitconfig  .gitmodules  .profile  .tmux.conf  .tmux.conf.local  .xprofile  .xsession  .zshenv  README.org
code/doug-xmonad/: #xmonad.hs#  .dir-locals.el  build  cabal.project.local  default.nix  doug-xmonad.cabal  shell.nix  stack.yaml  xmonad.hi  xmonad.hs
code/doug-xmonad/.direnv/: default  dump-1935007e691f5564291371ac9b1f3ab4-7fb6ab79f94e3a277dd87f5224ffb413
code/doug-xmonad/.direnv/env-62f43e7abd59d3242ff946e8e42a34bc/: dep-2-info  dep-2-man  dep-4  env.drv
code/doug-xmonad/.direnv/env-f2f13e2a324dad78f4db71b688f8564c/: dep-2  dep-2-dev  dep-2-doc  dep-3  dep-4  dep-6  env.drv
code/doug-xmonad/.stack-work/install/x86_64-linux-nix/ghc-8.4.3/8.4.3/pkgdb/: X11-rm-0.2-AtBZpFixmgmC5xUMMDeoBg.conf  package.cache
code/doug-xmonad/.stack-work/logs/: X11-rm-0.2.log-color  doug-xmonad-0.1.0.0.log-color
code/doug-xmonad/X11-rm-0.2/: cabal.sandbox.config  styx.yaml
code/doug-xmonad/X11-rm-0.2/.styx/: X11-rm.nix  add-source-timestamps  shell.nix
code/doug-xmonad/X11-rm-0.2/.styx/lib/x86_64-linux-ghc-8.4.3/X11-rm-0.2-AtBZpFixmgmC5xUMMDeoBg/Graphics/X11/: XRM.dyn_hi  (+1 more)
code/doug-xmonad/X11-rm-0.2/.styx/x86_64-linux-ghc-8.4.3-packages.conf.d/: X11-rm-0.2-AtBZpFixmgmC5xUMMDeoBg.conf  package.cache
code/doug-xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
code/doug-xmonad/lib/XMonad/Hooks/: DynamicProperty.hs
code/doug-xmonad/src/DougMonad/: Bindings.hs
(+87 files in other folders)
