name:                doug-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable doug-xmonad
  main-is:             xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:       
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , unix, containers, process, unordered-containers, lens, text, writer-cps-mtl, monoidal-containers, dbus, utf8-string, split, unix, async, filepath, semigroupoids, xmonad, xmonad-contrib

  hs-source-dirs:      . src
  default-language:    Haskell2010
  ghc-options:         -Wall  -fno-warn-missing-signatures -threaded -rtsopts
